# Cayley-Delta-State-Space-Model

./: .gitignore  CLAUDE.md  README.md  comparison_doc.md  optimization_plan.md  proposal.md  pyproject.toml  reproduce.py  requirements.txt  setup.py
cdssm/: __init__.py  cli.py  eval.py  ops.py  sweep.py  train.py
cdssm/config/: __init__.py  defaults.py  experiment.py  model.py
cdssm/csrc/: binding.cpp
cdssm/data/: __init__.py  datasets.py  loaders.py  preprocessing.py
cdssm/evaluation/: __init__.py  evaluator.py  lm_eval_wrapper.py  metrics.py
cdssm/inference/: __init__.py  predict.py
cdssm/models/: __init__.py  backbone.py  block.py  components.py  init.py  model.py  modules.py  ssd.py
cdssm/ops/: __init__.py
cdssm/training/: __init__.py  losses.py  optim.py  trainer.py
cdssm/utils/: __init__.py  checkpointing.py  distributed.py  logging.py  seeding.py
configs/: default.yaml  fineweb.yaml
configs/dataset/: fineweb_edu.yaml  wikitext103.yaml
examples/: induction_head.py  wikitext.py
experiments/: bench_stability.py  bench_vs_mamba.py  bench_vs_transformer.py  metrics.py  passkey.py  plot_results.py  seed.py  training.py
kssm/: __init__.py  config.py
papers/: attention_when_you_need.md  gated_deltanet.md  griffin.md  mamba2_ssd.md  optimization_plan.md  s4.md  symplectic_rnn.md
scripts/: eval.py  reproduce_results.sh  sweep.py  train.py
tests/: __init__.py  test_backward.py  test_cayley.py  test_cuda_correctness.py  test_cuda_gradients.py  test_cuda_perf.py  test_e2e_training.py  test_scan.py  test_ssd_correctness.py  test_stability.py
(+78 files in other folders)
