[build-system]
requires = ["setuptools", "torch>=2.1.0", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "kssm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0",
    "numpy",
    "pybind11",
    "datasets>=2.14.0",
    "transformers",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["kssm*", "experiments*"]
