[build-system]
requires = ["setuptools", "torch>=2.1.0", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "kssm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.1.0,<2.6.0",
    "numpy<2.0",
    "pybind11>=2.11.0",
    "datasets>=2.14.0,<3.0",
    "transformers>=4.36.0,<5.0",
    "PyYAML>=6.0",
    "lm-eval==0.4.2",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["kssm*"]
